Offline_4/codebase/y.output
Terminals unused in grammar

    DO
    CHAR
    DOUBLE
    DEFAULT
    CONTINUE
    CONST_CHAR


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON
    9                 | type_specifier ID LPAREN parameter_list RPAREN error SEMICOLON
   10                 | type_specifier ID LPAREN RPAREN error SEMICOLON

   11 $@1: %empty

   12 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   13 $@2: %empty

   14 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   15 parameter_list: parameter_list COMMA type_specifier ID
   16               | parameter_list COMMA type_specifier
   17               | type_specifier ID
   18               | type_specifier
   19               | parameter_list COMMA type_specifier error
   20               | parameter_list COMMA error
   21               | type_specifier error
   22               | error

   23 compound_statement: LCURL statements RCURL
   24                   | LCURL RCURL

   25 var_declaration: type_specifier declaration_list SEMICOLON
   26                | type_specifier declaration_list error SEMICOLON

   27 type_specifier: INT
   28               | FLOAT
   29               | VOID

   30 declaration_list: declaration_list COMMA ID
   31                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   32                 | ID
   33                 | ID LTHIRD CONST_INT RTHIRD
   34                 | declaration_list error ID
   35                 | declaration_list error ID LTHIRD CONST_INT RTHIRD
   36                 | error ID
   37                 | ID LTHIRD error RTHIRD

   38 statements: statement
   39           | statements statement

   40 statement: var_declaration
   41          | expression_statement

   42 $@3: %empty

   43 statement: $@3 compound_statement
   44          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   45          | IF LPAREN expression RPAREN statement
   46          | IF LPAREN expression RPAREN statement ELSE statement
   47          | WHILE LPAREN expression RPAREN statement
   48          | PRINTLN LPAREN ID RPAREN SEMICOLON
   49          | RETURN expression SEMICOLON
   50          | PRINTLN LPAREN ID RPAREN error SEMICOLON
   51          | RETURN expression error SEMICOLON

   52 expression_statement: SEMICOLON
   53                     | expression SEMICOLON
   54                     | error SEMICOLON
   55                     | expression error SEMICOLON

   56 variable: ID
   57         | ID LTHIRD expression RTHIRD

   58 expression: logic_expression
   59           | variable ASSIGNOP logic_expression

   60 logic_expression: rel_expression
   61                 | rel_expression LOGICOP rel_expression

   62 rel_expression: simple_expression
   63               | simple_expression RELOP simple_expression

   64 simple_expression: term
   65                  | simple_expression ADDOP term

   66 term: unary_expression
   67     | term MULOP unary_expression

   68 unary_expression: ADDOP unary_expression
   69                 | NOT unary_expression
   70                 | factor

   71 factor: variable
   72       | ID LPAREN argument_list RPAREN
   73       | LPAREN expression RPAREN
   74       | CONST_INT
   75       | CONST_FLOAT
   76       | variable INCOP
   77       | variable DECOP
   78       | NUMBER_ERR

   79 argument_list: arguments
   80              | %empty

   81 arguments: arguments COMMA logic_expression
   82          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9 10 19 20 21 22 26 34 35 36 37 50 51 54 55
    IF (258) 45 46
    ELSE (259) 46
    FOR (260) 44
    WHILE (261) 47
    DO (262)
    CHAR (263)
    INT (264) 27
    FLOAT (265) 28
    VOID (266) 29
    DOUBLE (267)
    RETURN (268) 49 51
    DEFAULT (269)
    CONTINUE (270)
    PRINTLN (271) 48 50
    LTHIRD (272) 31 33 35 37 57
    RTHIRD (273) 31 33 35 37 57
    LCURL (274) 23 24
    RCURL (275) 23 24
    LPAREN (276) 7 8 9 10 12 14 44 45 46 47 48 50 72 73
    RPAREN (277) 7 8 9 10 12 14 44 45 46 47 48 50 72 73
    NOT (278) 69
    COMMA (279) 15 16 19 20 30 31 81
    SEMICOLON (280) 7 8 9 10 25 26 48 49 50 51 52 53 54 55
    ADDOP (281) 65 68
    MULOP (282) 67
    INCOP (283) 76
    DECOP (284) 77
    RELOP (285) 63
    ASSIGNOP (286) 59
    LOGICOP (287) 61
    ID (288) 7 8 9 10 12 14 15 17 30 31 32 33 34 35 36 37 48 50 56 57 72
    CONST_INT (289) 31 33 35 74
    CONST_FLOAT (290) 75
    CONST_CHAR (291)
    NUMBER_ERR (292) 78
    LOWER_THAN_ELSE (293)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    start (40)
        on left: 1
        on right: 0
    program (41)
        on left: 2 3
        on right: 1 2
    unit (42)
        on left: 4 5 6
        on right: 2 3
    func_declaration (43)
        on left: 7 8 9 10
        on right: 5
    func_definition (44)
        on left: 12 14
        on right: 6
    $@1 (45)
        on left: 11
        on right: 12
    $@2 (46)
        on left: 13
        on right: 14
    parameter_list (47)
        on left: 15 16 17 18 19 20 21 22
        on right: 7 9 12 15 16 19 20
    compound_statement (48)
        on left: 23 24
        on right: 12 14 43
    var_declaration (49)
        on left: 25 26
        on right: 4 40
    type_specifier (50)
        on left: 27 28 29
        on right: 7 8 9 10 12 14 15 16 17 18 19 21 25 26
    declaration_list (51)
        on left: 30 31 32 33 34 35 36 37
        on right: 25 26 30 31 34 35
    statements (52)
        on left: 38 39
        on right: 23 39
    statement (53)
        on left: 40 41 43 44 45 46 47 48 49 50 51
        on right: 38 39 44 45 46 47
    $@3 (54)
        on left: 42
        on right: 43
    expression_statement (55)
        on left: 52 53 54 55
        on right: 41 44
    variable (56)
        on left: 56 57
        on right: 59 71 76 77
    expression (57)
        on left: 58 59
        on right: 44 45 46 47 49 51 53 55 57 73
    logic_expression (58)
        on left: 60 61
        on right: 58 59 81 82
    rel_expression (59)
        on left: 62 63
        on right: 60 61
    simple_expression (60)
        on left: 64 65
        on right: 62 63 65
    term (61)
        on left: 66 67
        on right: 64 65 67
    unary_expression (62)
        on left: 68 69 70
        on right: 66 67 68 69
    factor (63)
        on left: 71 72 73 74 75 76 77 78
        on right: 70
    argument_list (64)
        on left: 79 80
        on right: 72
    arguments (65)
        on left: 81 82
        on right: 79 81


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   27 type_specifier: INT .

    $default  reduce using rule 27 (type_specifier)


State 2

   28 type_specifier: FLOAT .

    $default  reduce using rule 28 (type_specifier)


State 3

   29 type_specifier: VOID .

    $default  reduce using rule 29 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN RPAREN SEMICOLON
    9                 | type_specifier . ID LPAREN parameter_list RPAREN error SEMICOLON
   10                 | type_specifier . ID LPAREN RPAREN error SEMICOLON
   12 func_definition: type_specifier . ID LPAREN parameter_list RPAREN $@1 compound_statement
   14                | type_specifier . ID LPAREN RPAREN $@2 compound_statement
   25 var_declaration: type_specifier . declaration_list SEMICOLON
   26                | type_specifier . declaration_list error SEMICOLON

    error  shift, and go to state 13
    ID     shift, and go to state 14

    declaration_list  go to state 15


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

   36 declaration_list: error . ID

    ID  shift, and go to state 16


State 14

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN RPAREN SEMICOLON
    9                 | type_specifier ID . LPAREN parameter_list RPAREN error SEMICOLON
   10                 | type_specifier ID . LPAREN RPAREN error SEMICOLON
   12 func_definition: type_specifier ID . LPAREN parameter_list RPAREN $@1 compound_statement
   14                | type_specifier ID . LPAREN RPAREN $@2 compound_statement
   32 declaration_list: ID .
   33                 | ID . LTHIRD CONST_INT RTHIRD
   37                 | ID . LTHIRD error RTHIRD

    LTHIRD  shift, and go to state 17
    LPAREN  shift, and go to state 18

    $default  reduce using rule 32 (declaration_list)


State 15

   25 var_declaration: type_specifier declaration_list . SEMICOLON
   26                | type_specifier declaration_list . error SEMICOLON
   30 declaration_list: declaration_list . COMMA ID
   31                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD
   34                 | declaration_list . error ID
   35                 | declaration_list . error ID LTHIRD CONST_INT RTHIRD

    error      shift, and go to state 19
    COMMA      shift, and go to state 20
    SEMICOLON  shift, and go to state 21


State 16

   36 declaration_list: error ID .

    $default  reduce using rule 36 (declaration_list)


State 17

   33 declaration_list: ID LTHIRD . CONST_INT RTHIRD
   37                 | ID LTHIRD . error RTHIRD

    error      shift, and go to state 22
    CONST_INT  shift, and go to state 23


State 18

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . RPAREN SEMICOLON
    9                 | type_specifier ID LPAREN . parameter_list RPAREN error SEMICOLON
   10                 | type_specifier ID LPAREN . RPAREN error SEMICOLON
   12 func_definition: type_specifier ID LPAREN . parameter_list RPAREN $@1 compound_statement
   14                | type_specifier ID LPAREN . RPAREN $@2 compound_statement

    error   shift, and go to state 24
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 25

    parameter_list  go to state 26
    type_specifier  go to state 27


State 19

   26 var_declaration: type_specifier declaration_list error . SEMICOLON
   34 declaration_list: declaration_list error . ID
   35                 | declaration_list error . ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 28
    ID         shift, and go to state 29


State 20

   30 declaration_list: declaration_list COMMA . ID
   31                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 30


State 21

   25 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 25 (var_declaration)


State 22

   37 declaration_list: ID LTHIRD error . RTHIRD

    RTHIRD  shift, and go to state 31


State 23

   33 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 32


State 24

   22 parameter_list: error .

    $default  reduce using rule 22 (parameter_list)


State 25

    8 func_declaration: type_specifier ID LPAREN RPAREN . SEMICOLON
   10                 | type_specifier ID LPAREN RPAREN . error SEMICOLON
   14 func_definition: type_specifier ID LPAREN RPAREN . $@2 compound_statement

    error      shift, and go to state 33
    SEMICOLON  shift, and go to state 34

    LCURL  reduce using rule 13 ($@2)

    $@2  go to state 35


State 26

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    9                 | type_specifier ID LPAREN parameter_list . RPAREN error SEMICOLON
   12 func_definition: type_specifier ID LPAREN parameter_list . RPAREN $@1 compound_statement
   15 parameter_list: parameter_list . COMMA type_specifier ID
   16               | parameter_list . COMMA type_specifier
   19               | parameter_list . COMMA type_specifier error
   20               | parameter_list . COMMA error

    RPAREN  shift, and go to state 36
    COMMA   shift, and go to state 37


State 27

   17 parameter_list: type_specifier . ID
   18               | type_specifier .
   21               | type_specifier . error

    error  shift, and go to state 38
    ID     shift, and go to state 39

    RPAREN  reduce using rule 18 (parameter_list)
    COMMA   reduce using rule 18 (parameter_list)


State 28

   26 var_declaration: type_specifier declaration_list error SEMICOLON .

    $default  reduce using rule 26 (var_declaration)


State 29

   34 declaration_list: declaration_list error ID .
   35                 | declaration_list error ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 40

    $default  reduce using rule 34 (declaration_list)


State 30

   30 declaration_list: declaration_list COMMA ID .
   31                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 41

    $default  reduce using rule 30 (declaration_list)


State 31

   37 declaration_list: ID LTHIRD error RTHIRD .

    $default  reduce using rule 37 (declaration_list)


State 32

   33 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 33 (declaration_list)


State 33

   10 func_declaration: type_specifier ID LPAREN RPAREN error . SEMICOLON

    SEMICOLON  shift, and go to state 42


State 34

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON .

    $default  reduce using rule 8 (func_declaration)


State 35

   14 func_definition: type_specifier ID LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 44


State 36

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    9                 | type_specifier ID LPAREN parameter_list RPAREN . error SEMICOLON
   12 func_definition: type_specifier ID LPAREN parameter_list RPAREN . $@1 compound_statement

    error      shift, and go to state 45
    SEMICOLON  shift, and go to state 46

    LCURL  reduce using rule 11 ($@1)

    $@1  go to state 47


State 37

   15 parameter_list: parameter_list COMMA . type_specifier ID
   16               | parameter_list COMMA . type_specifier
   19               | parameter_list COMMA . type_specifier error
   20               | parameter_list COMMA . error

    error  shift, and go to state 48
    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 49


State 38

   21 parameter_list: type_specifier error .

    $default  reduce using rule 21 (parameter_list)


State 39

   17 parameter_list: type_specifier ID .

    $default  reduce using rule 17 (parameter_list)


State 40

   35 declaration_list: declaration_list error ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 50


State 41

   31 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 51


State 42

   10 func_declaration: type_specifier ID LPAREN RPAREN error SEMICOLON .

    $default  reduce using rule 10 (func_declaration)


State 43

   23 compound_statement: LCURL . statements RCURL
   24                   | LCURL . RCURL

    error        shift, and go to state 52
    IF           shift, and go to state 53
    FOR          shift, and go to state 54
    WHILE        shift, and go to state 55
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 56
    PRINTLN      shift, and go to state 57
    RCURL        shift, and go to state 58
    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    SEMICOLON    shift, and go to state 61
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    LCURL  reduce using rule 42 ($@3)

    var_declaration       go to state 67
    type_specifier        go to state 68
    statements            go to state 69
    statement             go to state 70
    $@3                   go to state 71
    expression_statement  go to state 72
    variable              go to state 73
    expression            go to state 74
    logic_expression      go to state 75
    rel_expression        go to state 76
    simple_expression     go to state 77
    term                  go to state 78
    unary_expression      go to state 79
    factor                go to state 80


State 44

   14 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 14 (func_definition)


State 45

    9 func_declaration: type_specifier ID LPAREN parameter_list RPAREN error . SEMICOLON

    SEMICOLON  shift, and go to state 81


State 46

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 47

   12 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 82


State 48

   20 parameter_list: parameter_list COMMA error .

    $default  reduce using rule 20 (parameter_list)


State 49

   15 parameter_list: parameter_list COMMA type_specifier . ID
   16               | parameter_list COMMA type_specifier .
   19               | parameter_list COMMA type_specifier . error

    error  shift, and go to state 83
    ID     shift, and go to state 84

    RPAREN  reduce using rule 16 (parameter_list)
    COMMA   reduce using rule 16 (parameter_list)


State 50

   35 declaration_list: declaration_list error ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 85


State 51

   31 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 86


State 52

   54 expression_statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 53

   45 statement: IF . LPAREN expression RPAREN statement
   46          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 88


State 54

   44 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 89


State 55

   47 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 90


State 56

   49 statement: RETURN . expression SEMICOLON
   51          | RETURN . expression error SEMICOLON

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 73
    expression         go to state 91
    logic_expression   go to state 75
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 57

   48 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON
   50          | PRINTLN . LPAREN ID RPAREN error SEMICOLON

    LPAREN  shift, and go to state 92


State 58

   24 compound_statement: LCURL RCURL .

    $default  reduce using rule 24 (compound_statement)


State 59

   73 factor: LPAREN . expression RPAREN

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 73
    expression         go to state 93
    logic_expression   go to state 75
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 60

   69 unary_expression: NOT . unary_expression

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable          go to state 94
    unary_expression  go to state 95
    factor            go to state 80


State 61

   52 expression_statement: SEMICOLON .

    $default  reduce using rule 52 (expression_statement)


State 62

   68 unary_expression: ADDOP . unary_expression

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable          go to state 94
    unary_expression  go to state 96
    factor            go to state 80


State 63

   56 variable: ID .
   57         | ID . LTHIRD expression RTHIRD
   72 factor: ID . LPAREN argument_list RPAREN

    LTHIRD  shift, and go to state 97
    LPAREN  shift, and go to state 98

    $default  reduce using rule 56 (variable)


State 64

   74 factor: CONST_INT .

    $default  reduce using rule 74 (factor)


State 65

   75 factor: CONST_FLOAT .

    $default  reduce using rule 75 (factor)


State 66

   78 factor: NUMBER_ERR .

    $default  reduce using rule 78 (factor)


State 67

   40 statement: var_declaration .

    $default  reduce using rule 40 (statement)


State 68

   25 var_declaration: type_specifier . declaration_list SEMICOLON
   26                | type_specifier . declaration_list error SEMICOLON

    error  shift, and go to state 13
    ID     shift, and go to state 99

    declaration_list  go to state 15


State 69

   23 compound_statement: LCURL statements . RCURL
   39 statements: statements . statement

    error        shift, and go to state 52
    IF           shift, and go to state 53
    FOR          shift, and go to state 54
    WHILE        shift, and go to state 55
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 56
    PRINTLN      shift, and go to state 57
    RCURL        shift, and go to state 100
    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    SEMICOLON    shift, and go to state 61
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    LCURL  reduce using rule 42 ($@3)

    var_declaration       go to state 67
    type_specifier        go to state 68
    statement             go to state 101
    $@3                   go to state 71
    expression_statement  go to state 72
    variable              go to state 73
    expression            go to state 74
    logic_expression      go to state 75
    rel_expression        go to state 76
    simple_expression     go to state 77
    term                  go to state 78
    unary_expression      go to state 79
    factor                go to state 80


State 70

   38 statements: statement .

    $default  reduce using rule 38 (statements)


State 71

   43 statement: $@3 . compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 102


State 72

   41 statement: expression_statement .

    $default  reduce using rule 41 (statement)


State 73

   59 expression: variable . ASSIGNOP logic_expression
   71 factor: variable .
   76       | variable . INCOP
   77       | variable . DECOP

    INCOP     shift, and go to state 103
    DECOP     shift, and go to state 104
    ASSIGNOP  shift, and go to state 105

    $default  reduce using rule 71 (factor)


State 74

   53 expression_statement: expression . SEMICOLON
   55                     | expression . error SEMICOLON

    error      shift, and go to state 106
    SEMICOLON  shift, and go to state 107


State 75

   58 expression: logic_expression .

    $default  reduce using rule 58 (expression)


State 76

   60 logic_expression: rel_expression .
   61                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 108

    $default  reduce using rule 60 (logic_expression)


State 77

   62 rel_expression: simple_expression .
   63               | simple_expression . RELOP simple_expression
   65 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 109
    RELOP  shift, and go to state 110

    $default  reduce using rule 62 (rel_expression)


State 78

   64 simple_expression: term .
   67 term: term . MULOP unary_expression

    MULOP  shift, and go to state 111

    $default  reduce using rule 64 (simple_expression)


State 79

   66 term: unary_expression .

    $default  reduce using rule 66 (term)


State 80

   70 unary_expression: factor .

    $default  reduce using rule 70 (unary_expression)


State 81

    9 func_declaration: type_specifier ID LPAREN parameter_list RPAREN error SEMICOLON .

    $default  reduce using rule 9 (func_declaration)


State 82

   12 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 12 (func_definition)


State 83

   19 parameter_list: parameter_list COMMA type_specifier error .

    $default  reduce using rule 19 (parameter_list)


State 84

   15 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 15 (parameter_list)


State 85

   35 declaration_list: declaration_list error ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 35 (declaration_list)


State 86

   31 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 31 (declaration_list)


State 87

   54 expression_statement: error SEMICOLON .

    $default  reduce using rule 54 (expression_statement)


State 88

   45 statement: IF LPAREN . expression RPAREN statement
   46          | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 73
    expression         go to state 112
    logic_expression   go to state 75
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 89

   44 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    error        shift, and go to state 52
    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    SEMICOLON    shift, and go to state 61
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    expression_statement  go to state 113
    variable              go to state 73
    expression            go to state 74
    logic_expression      go to state 75
    rel_expression        go to state 76
    simple_expression     go to state 77
    term                  go to state 78
    unary_expression      go to state 79
    factor                go to state 80


State 90

   47 statement: WHILE LPAREN . expression RPAREN statement

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 73
    expression         go to state 114
    logic_expression   go to state 75
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 91

   49 statement: RETURN expression . SEMICOLON
   51          | RETURN expression . error SEMICOLON

    error      shift, and go to state 115
    SEMICOLON  shift, and go to state 116


State 92

   48 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON
   50          | PRINTLN LPAREN . ID RPAREN error SEMICOLON

    ID  shift, and go to state 117


State 93

   73 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 118


State 94

   71 factor: variable .
   76       | variable . INCOP
   77       | variable . DECOP

    INCOP  shift, and go to state 103
    DECOP  shift, and go to state 104

    $default  reduce using rule 71 (factor)


State 95

   69 unary_expression: NOT unary_expression .

    $default  reduce using rule 69 (unary_expression)


State 96

   68 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 68 (unary_expression)


State 97

   57 variable: ID LTHIRD . expression RTHIRD

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 73
    expression         go to state 119
    logic_expression   go to state 75
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 98

   72 factor: ID LPAREN . argument_list RPAREN

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    $default  reduce using rule 80 (argument_list)

    variable           go to state 94
    logic_expression   go to state 120
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80
    argument_list      go to state 121
    arguments          go to state 122


State 99

   32 declaration_list: ID .
   33                 | ID . LTHIRD CONST_INT RTHIRD
   37                 | ID . LTHIRD error RTHIRD

    LTHIRD  shift, and go to state 17

    $default  reduce using rule 32 (declaration_list)


State 100

   23 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 23 (compound_statement)


State 101

   39 statements: statements statement .

    $default  reduce using rule 39 (statements)


State 102

   43 statement: $@3 compound_statement .

    $default  reduce using rule 43 (statement)


State 103

   76 factor: variable INCOP .

    $default  reduce using rule 76 (factor)


State 104

   77 factor: variable DECOP .

    $default  reduce using rule 77 (factor)


State 105

   59 expression: variable ASSIGNOP . logic_expression

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 94
    logic_expression   go to state 123
    rel_expression     go to state 76
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 106

   55 expression_statement: expression error . SEMICOLON

    SEMICOLON  shift, and go to state 124


State 107

   53 expression_statement: expression SEMICOLON .

    $default  reduce using rule 53 (expression_statement)


State 108

   61 logic_expression: rel_expression LOGICOP . rel_expression

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 94
    rel_expression     go to state 125
    simple_expression  go to state 77
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 109

   65 simple_expression: simple_expression ADDOP . term

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable          go to state 94
    term              go to state 126
    unary_expression  go to state 79
    factor            go to state 80


State 110

   63 rel_expression: simple_expression RELOP . simple_expression

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable           go to state 94
    simple_expression  go to state 127
    term               go to state 78
    unary_expression   go to state 79
    factor             go to state 80


State 111

   67 term: term MULOP . unary_expression

    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    variable          go to state 94
    unary_expression  go to state 128
    factor            go to state 80


State 112

   45 statement: IF LPAREN expression . RPAREN statement
   46          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 129


State 113

   44 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    error        shift, and go to state 52
    LPAREN       shift, and go to state 59
    NOT          shift, and go to state 60
    SEMICOLON    shift, and go to state 61
    ADDOP        shift, and go to state 62
    ID           shift, and go to state 63
    CONST_INT    shift, and go to state 64
    CONST_FLOAT  shift, and go to state 65
    NUMBER_ERR   shift, and go to state 66

    expression_statement  go to state 130
    variable              go to state 73
    expression            go to state 74
    logic_expression      go to state 75
    rel_expression        go to state 76
    simple_expression     go to state 77
    term                  go to state 78
    unary_expression      go to state 79
    factor                go to state 80


State 114

   47 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 131


State 115

   51 statement: RETURN expression error . SEMICOLON
